update main.ipynb to add output_padding

--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,6 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from tests import test_normal_convolution, test_transposed_convolution\n",
@@ -66,29 +65,28 @@
       "AllClose Check: Torch vs Numpy: Passed\n",
       "\n",
       "Output Shapes:\n",
-      "Numpy: (1, 1, 3, 3)\n",
-      "PyTorch: (1, 1, 3, 3)\n",
+      "Numpy: (5, 1, 6, 6)\n",
+      "PyTorch: (5, 1, 6, 6)\n",
       "\n",
       "Various Tensorflow Output Shapes:\n",
-      "padding='valid' output_padding=None (1, 1, 5, 5)\n",
-      "padding='same'  output_padding=None (1, 1, 4, 4)\n",
-      "padding='valid' output_padding=0    (1, 1, 5, 5)\n",
-      "padding='same'  output_padding=0    (1, 1, 3, 3)\n"
+      "padding='valid' (5, 1, 6, 6)\n",
+      "padding='same'  (5, 1, 4, 4)\n"
      ]
     }
    ],
    "source": [
     "strides = 2\n",
-    "padding = 1\n",
+    "padding = 0\n",
+    "output_padding = 1\n",
     "\n",
-    "inputs_shape = (1, 4, 2, 2) #(Samples, N Channels, Height, Width)\n",
-    "kernels_shape = (4, 1, 3, 3) #(N Channels, N Kernels, Height, Width)\n",
+    "inputs_shape = (5, 3, 2, 2) #(Samples, N Channels, Height, Width)\n",
+    "kernels_shape = (3, 1, 3, 3) #(N Channels, N Kernels, Height, Width)\n",
     "\n",
     "rng = np.random.default_rng(10)\n",
     "inputs = rng.random(inputs_shape)\n",
     "kernels = rng.random(kernels_shape)\n",
     "\n",
-    "test_transposed_convolution(inputs, kernels, strides, padding, \n",
+    "test_transposed_convolution(inputs, kernels, strides, padding, output_padding, \n",
     "                            print_arrays=False)"
    ]
   },
