change stride from int to tuple of two int

--- a/main.ipynb
+++ b/main.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "strides = 1\n",
+    "strides = (1, 1)\n",
     "inputs_shape = (4, 3, 5, 5) #(Samples, N Channels, Height, Width)\n",
     "kernels_shape = (2, 3, 3, 3) #(N Kernels, N Channels, Height, Width)\n",
     "\n",
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "strides = 2\n",
+    "strides = (2, 2)\n",
     "padding = 0\n",
     "output_padding = 1\n",
     "\n",
